syntax = "proto3";

package protocol;

option go_package = "/protocol";

enum Joint {
  LEFT_SHOULDER = 0;
  RIGHT_SHOULDER = 1;
  LEFT_ELBOW = 2;
  RIGHT_ELBOW = 3;
  LEFT_HIP = 4;
  RIGHT_HIP = 5;
  LEFT_KNEE = 6;
  RIGHT_KNEE = 7;
}

message AnalyseVideoReq {
  string name = 1;
  uint32 frame_step = 2;
  repeated Joint joints = 3;
  bool use_cached = 4;
  bytes video = 5;
}

message AnalyseVideoRes {
  repeated bytes analysed_frames = 1;
  repeated EstimatedAngles angles = 2;
}

message EstimatedAngles {
  Joint joint = 1;
  repeated float angles = 2;
}
